@@ -1,31 +1,31 @@
 /*-------------------------------------------------------------------------
-  float.h - ANSI functions forward declarations
- 
-	Adopted for pic16 port library by Vangelis Rokas
-		[vrokas at otenet.gr] (2004)
-		
-	Adopted for pic14 port library by Raphael Neider
-		[rneider at web.de] (2006)
+   float.h - ANSI functions forward declarations
 
-             Written By -  Sandeep Dutta . sandeep.dutta@usa.net (1998)
+   Copyright (C) 1998, Sandeep Dutta <sandeep.dutt AT usa.net>
+   Adopted for pic16 port library by Vangelis Rokas <vrokas AT otenet.gr> (2004)
+   Adopted for pic14 port library by Raphael Neider <rneider at web.de> (2006)
 
-   This program is free software; you can redistribute it and/or modify it
+   This library is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
-   Free Software Foundation; either version 2, or (at your option) any
+   Free Software Foundation; either version 2.1, or (at your option) any
    later version.
-   
-   This program is distributed in the hope that it will be useful,
+
+   This library is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU General Public License for more details.
-   
-   You should have received a copy of the GNU General Public License
-   along with this program; if not, write to the Free Software
-   Foundation, 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
-   
-   In other words, you are welcome to use, share and improve this program.
-   You are forbidden to forbid anyone else to use, share and improve
-   what you give them.   Help stamp out software-hoarding!  
+
+   You should have received a copy of the GNU General Public License 
+   along with this library; see the file COPYING. If not, write to the
+   Free Software Foundation, 51 Franklin Street, Fifth Floor, Boston,
+   MA 02110-1301, USA.
+
+   As a special exception, if you link this library with other files,
+   some of which are compiled with SDCC, to produce an executable,
+   this library does not by itself cause the resulting executable to
+   be covered by the GNU General Public License. This exception does
+   not however invalidate any other reasons why the executable file
+   might be covered by the GNU General Public License.
 -------------------------------------------------------------------------*/
 
 #ifndef __PIC14_FLOAT_H
