@@ -1,23 +1,32 @@
+/*-------------------------------------------------------------------------
+   sdcc-lib.h - SDCC Library Main Header
 
-/*
- * sdcc-lib.h - SDCC Library Main Header
- *
- * This file is part of the GNU PIC Library.
- *
- * June, 2600: adopted for pic14
- * 	Raphael Neider <rneider at web.de>
- *
- * January, 2004
- * The GNU PIC Library is maintained by,
- * 	Vangelis Rokas <vrokas@otenet.gr>
- *
- * $Id$
- *
- */
+   Copyright (C) 2004, Vangelis Rokas <vrokas AT otenet.gr>
+   Adopted for pic14 port library by Raphael Neider <rneider at web.de> (2006)
 
-/** Top level header file for the sdcc libraries that enables target
-    specific features.
-*/
+   This library is free software; you can redistribute it and/or modify it
+   under the terms of the GNU General Public License as published by the
+   Free Software Foundation; either version 2.1, or (at your option) any
+   later version.
+
+   This library is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License 
+   along with this library; see the file COPYING. If not, write to the
+   Free Software Foundation, 51 Franklin Street, Fifth Floor, Boston,
+   MA 02110-1301, USA.
+
+   As a special exception, if you link this library with other files,
+   some of which are compiled with SDCC, to produce an executable,
+   this library does not by itself cause the resulting executable to
+   be covered by the GNU General Public License. This exception does
+   not however invalidate any other reasons why the executable file
+   might be covered by the GNU General Public License.
+-------------------------------------------------------------------------*/
+
 #ifndef __PIC14_SDCC_LIB_H
 #define __PIC14_SDCC_LIB_H	1
 
